...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/side_drawer_layout">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:orientation="horizontal"
            android:background="@drawable/background_badge"
            android:elevation="@dimen/side_drawer_top_bar_elevation">

        <ImageButton
                android:id="@+id/close_btn"
                android:layout_width="@dimen/appbar_icon_width"
                android:layout_height="@dimen/appbar_icon_width"
                android:layout_marginStart="@dimen/appbar_margin_start"
                android:scaleType="fitCenter"
                android:src="@drawable/cross_image"
                android:background="@null"
...
