...
                android:id="@+id/spinner_view_container"
                android:background="@drawable/background_top_interface_bar_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                app:layout_constraintStart_toEndOf="@id/spinner_sort_container"
                app:layout_constraintEnd_toStartOf="@id/textView_filter"
                tools:ignore="MissingConstraints">

                <TextView
                        android:id="@+id/spinner_view_prompt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
...
